readme update: bounties

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ openssl/ssl
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
-profile
 *.moved-aside
 DerivedData
 .idea/
@@ -23,3 +22,4 @@ DerivedData
 # svn & cvs
 .svn
 CVS
+CoreBitcoin.xcodeproj/project.xcworkspace/xcshareddata/
