--- a/CoreBitcoinIOS/CoreBitcoinIOS-Info.plist
+++ b/CoreBitcoinIOS/CoreBitcoinIOS-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>hu.bjano.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.oleganza.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,20 +27,12 @@
 	<key>CFPlugInDynamicRegistration</key>
 	<string>NO</string>
 	<key>CFPlugInFactories</key>
-	<dict>
-		<key>00000000-0000-0000-0000-000000000000</key>
-		<string>MyFactoryFunction</string>
-	</dict>
+	<dict/>
 	<key>CFPlugInTypes</key>
-	<dict>
-		<key>00000000-0000-0000-0000-000000000000</key>
-		<array>
-			<string>00000000-0000-0000-0000-000000000000</string>
-		</array>
-	</dict>
+	<dict/>
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013 Oleg Andreev. All rights reserved.</string>
+	<string>CoreBitcoin by Oleg Andreev &lt;oleganza@gmail.com&gt;, WTFPL.</string>
 </dict>
 </plist>
